Adding vue project instead of svelte
